# llvm-pass-for-instrumentation

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bk  Makefile  README.md  alloc-inl.h  llvm-pass.cpp  llvm-pass.so.cpp  llvm-rt.o.c  myclangwrapper.c  tools.h
